Replace "id" with "instancetype" in generated objc model init methods

--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -19,7 +19,7 @@
 }
 {{/hasVars}}
 
-- (id)initWithValues:(NSDictionary*)dict
+- (instancetype)initWithValues:(NSDictionary*)dict
 {
     {{#vars}}{{#isPrimitiveType}}{{datatype}} {{name}} = dict[@"{{baseName}}"];{{/isPrimitiveType}}
     {{#complexType}}id {{name}}_dict = dict[@"{{baseName}}"];{{#isContainer}}
