add else checks in intent service

--- a/src/main/resources/android-java/intentService.mustache
+++ b/src/main/resources/android-java/intentService.mustache
@@ -47,7 +47,7 @@ public class {{classname}}Service extends IntentService {
         try {
 {{#operations}}
 {{#operation}}
-            if (method.equals({{operationIdConst}})) {
+            {{^-first}}else {{/-first}}if (method.equals({{operationIdConst}})) {
 {{#allParams}}
                 {{dataType}} {{paramName}} = intent.{{#serializeMethod}}ARG_{{-index}}{{/serializeMethod}};
 {{/allParams}}
